--- a/front/website/src/components/layout/Footer.astro
+++ b/front/website/src/components/layout/Footer.astro
@@ -158,10 +158,12 @@
             </div>
             <div>
               <p class="text-gray-300 font-medium">Horarios</p>
-              <p class="text-gray-400 text-sm">
-                Lun - Dom<br />
-                12:00 PM - 10:00 PM
-              </p>
+              <div class="text-gray-400 text-sm space-y-1">
+                <p><strong>Lun - Mié:</strong> 11:00 AM - 7:00 PM</p>
+                <p><strong>Jue - Vie:</strong> 11:00 AM - 9:00 PM</p>
+                <p><strong>Sábado:</strong> 11:00 AM - 5:00 PM</p>
+                <p><strong>Domingo:</strong> Cerrado</p>
+              </div>
             </div>
           </div>
         </div>
