--- a/front/website/src/pages/index.astro
+++ b/front/website/src/pages/index.astro
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <title>Redirigiendo a Trattoria La Bella...</title>
     <script>
       // Redirección inmediata con JavaScript
-      window.location.href = '/inicio';
+      window.location.href = "/inicio";
     </script>
   </head>
   <body>
@@ -14,4 +14,5 @@
       <a href="/inicio">haz clic aquí para ir al inicio</a>.
     </p>
   </body>
-</html> 
+</html>
+
